--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,23 +65,66 @@ body {
   text-align: center;
 }
 
-.hero-advantages .lead {
+..hero-advantages {
   font-family: "PT Sans", sans-serif;
   color: #000000;
   background-color: #fff;
+}
+
+.hero-advantages .lead {
+  color: #000000;
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
   text-align: center;
 }
 
-.hero-advantages  p{
+.hero-advantages p {
   font-family: "PT Sans", sans-serif;
-  color:#333333;
+  color: #333333;
   background-color: #fff;
   font-size: 22px;
   font-weight: 400;
   line-height: 26px;
   text-align: center;
+}
+
+
+
+.advantages-list h3 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+}
+
+.advantages-list p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+}
+
+
+.advantages-item-5 {
+  background-color: #82B3D3;
+  color: #FFFFFF;
+}
+
+.advantages-item-1 {
+  background-color: #82B3D3;
+  color: #FFFFFF;
+}
+
+.advantages-item-2 {
+  background-color: rgba(131, 179, 211, 0.12);
+}
+
+.advantages-item-3 {
+  background-color: rgba(131, 179, 211, 0.2);
+}
+
+.advantages-item-4 {
+  background-color: rgba(131, 179, 211, 0.12);
 
 }
