--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,6 +77,7 @@ body {
   font-weight: 700;
   line-height: 36px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .hero-advantages p {
@@ -96,6 +97,7 @@ body {
   font-size: 24px;
   line-height: 28px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .advantages-list p {
@@ -133,6 +135,7 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .advantages p {
@@ -148,6 +151,7 @@ body {
   font-size: 24px;
   line-height: 28px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .services-item p {
@@ -157,10 +161,38 @@ body {
   text-align: center;
 }
 
-.services-item-housing{
+.services-item-housing {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.services-item-souvenirs{
+.services-item-souvenirs {
   background-color: rgba(131, 179, 211, 0.12);
+}
+
+.search-hotel {
+  text-align: center;
+}
+
+.search-hotel h2 {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+
+}
+
+.search-hotel p {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.search-hotel a {
+  text-decoration: none;
+  color: #FFFFFF;
+  background-color: #756157;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-transform: uppercase;
 }
