--- a/styles/styles.css
+++ b/styles/styles.css
@@ -159,6 +159,7 @@ body {
   font-size: 18px;
   line-height: 21px;
   text-align: center;
+  color:#333333;
 }
 
 .services-item-housing {
@@ -185,6 +186,7 @@ body {
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
+  color: #333333;
 }
 
 .search-hotel a {
