--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,8 +45,8 @@ body {
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
   line-height: 24px;
-  color: #000000;
-  background-color: #fff;
+  color: #FFFFFF;
+  background-color: #756157;
   text-decoration: none;
   font-weight: 700;
   text-align: center;
