--- a/styles/styles.css
+++ b/styles/styles.css
@@ -333,3 +333,12 @@ color: #fff;
   text-align: center;
   text-transform: uppercase;
 }
+.pagination a {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #82B3D3;
+  text-decoration: none;
+}
