--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,7 +65,7 @@ body {
   text-align: center;
 }
 
-..hero-advantages {
+.hero-advantages {
   font-family: "PT Sans", sans-serif;
   color: #000000;
   background-color: #fff;
