--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,7 +107,8 @@ body {
   line-height: 21px;
   text-align: center;
 }
-.advantages-item{
+
+.advantages-item {
   background-color: #82B3D3;
 }
 
@@ -146,7 +147,8 @@ body {
   text-transform: uppercase;
   color: #000000;
 }
-.advantages{
+
+.advantages {
   text-align: center;
 }
 
@@ -157,6 +159,7 @@ body {
   line-height: 28px;
   text-align: center;
   text-transform: uppercase;
+  color: #000000;
 }
 
 .services-item p {
@@ -167,10 +170,7 @@ body {
   color: #333333;
 }
 
-.services-item-housing {
-  background-color: rgba(131, 179, 211, 0.12);
-}
-
+.services-item-housing,
 .services-item-souvenirs {
   background-color: rgba(131, 179, 211, 0.12);
 }
@@ -185,7 +185,6 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   color: #000000;
-
 }
 
 .search-hotel p {
