--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,13 @@ body {
   color: #000000;
 }
 
+.site-navigation{
+  list-style: none;
+}
+.menu{
+  list-style: none;
+}
+
 .navigation-link {
   font-family: "PT Sans", sans-serif;
   font-size: 20px;
@@ -90,7 +97,12 @@ body {
   text-align: center;
 }
 
-
+.advantages-list {
+  list-style: none;
+}
+.services-list {
+  list-style: none;
+}
 
 .advantages-list h3 {
   font-weight: 700;
@@ -237,6 +249,9 @@ body {
   color: #000000;
   text-decoration: none;
 }
+.social-list{
+  list-style: none;
+}
 
 .contacts-phone {
   color: #000000;
@@ -263,13 +278,19 @@ body {
   font-size: 60px;
   line-height: 78px;
 }
-
+.breadcrumbs-item{
+  list-style: none;
+}
 .breadcrumbs-item a {
   font-size: 16px;
   line-height: 21px;
   text-decoration: none;
   color: #FFFFFF;
   font-weight: 400;
+}
+
+.catalog-filter-list{
+  list-style: none;
 }
 
 .catalog-products .catalog-filter-title {
@@ -297,6 +318,9 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
+}
+.product-list{
+  list-style: none;
 }
 
 .product-card a {
@@ -346,6 +370,9 @@ body {
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
+}
+.pagination{
+  list-style: none;
 }
 
 .pagination a {
