--- a/styles/styles.css
+++ b/styles/styles.css
@@ -276,7 +276,7 @@ body {
   font-family: "PT Sans", sans-serif;
 }
 
-.main-inner h2 {
+.main-inner h1 {
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
@@ -284,15 +284,18 @@ body {
 
 .breadcrumbs-item {
   list-style: none;
-}
-
-.breadcrumbs-item a {
   font-size: 16px;
   line-height: 21px;
-  text-decoration: none;
   color: #FFFFFF;
   font-weight: 400;
 }
+
+.breadcrumbs-item a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+
 
 .catalog-filter-list {
   list-style: none;
