--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,14 +18,14 @@ body {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
-  background: #fff;
+  background: #FFFFFF;
   color: #333333;
 }
 
 
 
 .page-header {
-  background: #fff;
+  background: #FFFFFF;
   color: #000000;
 }
 
@@ -38,11 +38,10 @@ body {
 }
 
 .navigation-link {
-  font-family: "PT Sans", sans-serif;
   font-size: 20px;
   line-height: 24px;
   color: #000000;
-  background-color: #fff;
+  background-color: #FFFFFF;
   text-decoration: none;
   font-weight: 700;
   text-align: center;
@@ -50,7 +49,6 @@ body {
 }
 
 .menu-button {
-  font-family: "PT Sans", sans-serif;
   font-size: 16px;
   line-height: 24px;
   color: #FFFFFF;
@@ -64,7 +62,7 @@ body {
 
 .hero {
   color: #000000;
-  background-color: #fff;
+  background-color: #FFFFFF;
   background-image: url(../images/index-background.jpg);
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -74,9 +72,8 @@ body {
 }
 
 .hero-advantages {
-  font-family: "PT Sans", sans-serif;
   color: #000000;
-  background-color: #fff;
+  background-color: #FFFFFF;
 }
 
 .hero-advantages .lead {
@@ -89,9 +86,8 @@ body {
 }
 
 .hero-advantages p {
-  font-family: "PT Sans", sans-serif;
   color: #333333;
-  background-color: #fff;
+  background-color: #FFFFFF;
   font-size: 22px;
   font-weight: 400;
   line-height: 26px;
@@ -241,10 +237,8 @@ body {
 }
 
 .main-footer {
-  font-family: "PT Sans", sans-serif;
   color: #000000;
-  background-color: #fff;
-
+  background-color: #FFFFFF;
 }
 
 .social-item a {
@@ -269,11 +263,7 @@ body {
   background-image: url(../images/subscribe-2.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  color: #fff;
-}
-
-.main-inner {
-  font-family: "PT Sans", sans-serif;
+  color: #FFFFFF;
 }
 
 .main-inner h1 {
@@ -398,7 +388,7 @@ body {
 
 .subscription-catalog {
   color: #000000;
-  background-color: #fff;
+  background-color: #FFFFFF;
   text-align: center;
 }
 
