--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,14 +18,14 @@ body {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
-  background: #FFFFFF;
+  background: #ffffff;
   color: #333333;
 }
 
 
 
 .page-header {
-  background: #FFFFFF;
+  background: #ffffff;
   color: #000000;
 }
 
@@ -41,7 +41,7 @@ body {
   font-size: 20px;
   line-height: 24px;
   color: #000000;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   text-decoration: none;
   font-weight: 700;
   text-align: center;
@@ -51,7 +51,7 @@ body {
 .menu-button {
   font-size: 16px;
   line-height: 24px;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #756157;
   text-decoration: none;
   font-weight: 700;
@@ -62,7 +62,7 @@ body {
 
 .hero {
   color: #000000;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   background-image: url(../images/index-background.jpg);
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -73,7 +73,7 @@ body {
 
 .hero-advantages {
   color: #000000;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .hero-advantages .lead {
@@ -87,7 +87,7 @@ body {
 
 .hero-advantages p {
   color: #333333;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   font-size: 22px;
   font-weight: 400;
   line-height: 26px;
@@ -119,21 +119,21 @@ body {
 }
 
 .advantages-item {
-  background-color: #82B3D3;
+  background-color: #82b3d3;
 }
 
 .advantages-item-city,
 .advantages-item-bridge {
-  background-color: #82B3D3;
-  color: #FFFFFF;
+  background-color: #82b3d3;
+  color: #ffffff;
 }
 
 .advantages-item-city h3 {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .advantages-item-bridge h3 {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .advantages-item-square,
@@ -207,7 +207,7 @@ body {
 
 .search-hotel a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #756157;
   font-weight: 700;
   font-size: 20px;
@@ -220,7 +220,7 @@ body {
   background-repeat: no-repeat;
   background-size: 100% auto;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .subscription h2 {
@@ -238,7 +238,7 @@ body {
 
 .main-footer {
   color: #000000;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .social-item a {
@@ -263,7 +263,7 @@ body {
   background-image: url(../images/subscribe-2.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .main-inner h1 {
@@ -276,12 +276,12 @@ body {
   list-style: none;
   font-size: 16px;
   line-height: 21px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-weight: 400;
 }
 
 .breadcrumbs-item a {
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -338,12 +338,12 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
-  border: 1px solid #E6E6E6;
+  border: 1px solid #e6e6e6;
   color: #333333;
 }
 
 .product-card .product-card-button {
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #756157;
   font-weight: 700;
   font-size: 16px;
@@ -353,8 +353,8 @@ body {
 }
 
 .product-card .product-card-button-favorites {
-  color: #FFFFFF;
-  background-color: #82B3D3;
+  color: #ffffff;
+  background-color: #82b3d3;
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
@@ -382,13 +382,13 @@ body {
   font-weight: 700;
   text-decoration: none;
   text-align: center;
-  color: #FFFFFF;
-  background-color: #82B3D3;
+  color: #ffffff;
+  background-color: #82b3d3;
 }
 
 .subscription-catalog {
   color: #000000;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   text-align: center;
 }
 
