--- a/styles/styles.css
+++ b/styles/styles.css
@@ -363,7 +363,7 @@ body {
 }
 
 .product-card .rating {
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
