--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,8 +22,6 @@ body {
   color: #333333;
 }
 
-
-
 .page-header {
   background: #ffffff;
   color: #000000;
@@ -107,6 +105,7 @@ body {
   color: #000000;
 }
 
+
 .advantages-list p {
   font-weight: 400;
   font-size: 18px;
@@ -114,22 +113,22 @@ body {
   text-align: center;
 }
 
-.advantages-item-wide {
-  background-color: #82b3d3;
-  color: #ffffff;
-}
+
 
 .advantages-item-wide h3 {
   color: #ffffff;
 }
 
-.advantages-list :nth-child(2),
-.advantages-list :nth-child(4) {
+.advantages-list :nth-child( even ) {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.advantages-list :nth-child(3) {
+.advantages-list :nth-child( odd ) {
   background-color: rgba(131, 179, 211, 0.2);
+}
+.advantages-list .advantages-item-wide {
+  background-color: #82b3d3;
+  color: #ffffff;
 }
 
 .advantages h2 {
