Изменяет стиль в services-item
псевдокласс :nth-child

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -159,8 +159,7 @@ body {
   color: #333333;
 }
 
-.services-item-housing,
-.services-item-souvenirs {
+.services-item:nth-child(odd){
   background-color: rgba(131, 179, 211, 0.12);
 }
 
