--- a/4/styles/styles.css
+++ b/4/styles/styles.css
@@ -22,8 +22,6 @@ body {
   color: #333333;
 }
 
-
-
 .page-header {
   background: #ffffff;
   color: #000000;
@@ -114,22 +112,21 @@ body {
   text-align: center;
 }
 
-.advantages-item-wide {
-  background-color: #82b3d3;
-  color: #ffffff;
-}
-
 .advantages-item-wide h3 {
   color: #ffffff;
 }
 
-.advantages-list :nth-child(2),
-.advantages-list :nth-child(4) {
+.advantages-item:nth-child(even) {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.advantages-list :nth-child(3) {
+.advantages-item:nth-child(odd) {
   background-color: rgba(131, 179, 211, 0.2);
+}
+
+.advantages-list .advantages-item-wide {
+  background-color: #82b3d3;
+  color: #ffffff;
 }
 
 .advantages h2 {
@@ -162,8 +159,7 @@ body {
   color: #333333;
 }
 
-.services-item-housing,
-.services-item-souvenirs {
+.services-item:nth-child(odd) {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
@@ -267,8 +263,6 @@ body {
   text-decoration: none;
 }
 
-
-
 .catalog-filter-list {
   list-style: none;
 }
@@ -355,7 +349,6 @@ body {
 
 .pagination {
   list-style: none;
-
 }
 
 .pagination a {
@@ -380,7 +373,6 @@ body {
   line-height: 36px;
   color: #000000;
   text-transform: uppercase;
-
 }
 
 .subscription-catalog p {
