--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,15 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
@@ -22,17 +30,45 @@ body {
   color: #333333;
 }
 
-.page-header {
-  background: #ffffff;
-  color: #000000;
+.main-container {
+  flex-grow: 1;
+}
+
+/**Шапка **/
+
+.mane-header{
+  display: flex;
+  width: 1200px;
+  margin:0 auto;
+}
+
+.navigation{
+  display: flex;
 }
 
 .site-navigation {
   list-style: none;
-}
+  margin:0;
+  padding:0;
+  width: 340px;
+  margin-right: 285px;
+  }
 
 .menu {
   list-style: none;
+  margin:0;
+  padding:0;
+  width: 270px;
+  margin-left: auto;
+  margin-right:70px;
+
+
+}
+
+.logo {
+  width: 138px;
+  margin-right: 28px;
+  padding-left: 70px;
 }
 
 .navigation-link {
@@ -56,6 +92,13 @@ body {
   text-align: center;
   list-style-type: none;
   text-transform: uppercase;
+}
+
+/**main **/
+
+.page-container{
+width: 1200px;
+margin: 0 auto;
 }
 
 .hero {
@@ -380,10 +423,4 @@ body {
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
-}
-
-.page-container
-{
-  width: 1200px;
-  margin: 0 auto;
 }
