--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,31 +36,31 @@ body {
 
 /**Шапка **/
 
-.mane-header{
+.mane-header {
   display: flex;
   width: 1200px;
-  margin:0 auto;
+  margin: 0 auto;
 }
 
-.navigation{
+.navigation {
   display: flex;
 }
 
 .site-navigation {
   list-style: none;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   width: 340px;
   margin-right: 285px;
-  }
+}
 
 .menu {
   list-style: none;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   width: 270px;
   margin-left: auto;
-  margin-right:70px;
+  margin-right: 70px;
 
 
 }
@@ -96,9 +96,14 @@ body {
 
 /**main **/
 
-.page-container{
-width: 1200px;
-margin: 0 auto;
+.main-index {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.page-container {
+  width: 1200px;
+  margin: 0 auto;
 }
 
 .hero {
@@ -108,6 +113,11 @@ margin: 0 auto;
   background-repeat: no-repeat;
   background-size: 100% auto;
   text-align: center;
+}
+
+.welcome {
+  display: block;
+  margin: 0 auto;
 }
 
 .hero-advantages {
@@ -133,6 +143,15 @@ margin: 0 auto;
 
 .advantages-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.advantages-item {
+  width: 400px;
+
 }
 
 .services-list {
@@ -185,6 +204,11 @@ margin: 0 auto;
   text-align: center;
 }
 
+.services-list {
+  margin: 0;
+  padding: 0;
+}
+
 .services-item h3 {
   font-weight: 700;
   font-size: 24px;
@@ -209,6 +233,8 @@ margin: 0 auto;
 .search-hotel {
   font-family: "PT Sans", sans-serif;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .search-hotel .search-hotel-question {
@@ -242,6 +268,8 @@ margin: 0 auto;
   background-size: 100% auto;
   text-align: center;
   color: #ffffff;
+  margin: 0;
+  padding: 0;
 }
 
 .subscription h2 {
