--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,9 +37,16 @@ body {
 /**Шапка **/
 
 .mane-header {
-  display: flex;
   width: 1200px;
   margin: 0 auto;
+}
+
+.header-container {
+  width: 1060px;
+  padding-left: 70px;
+  padding-right: 70px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .navigation {
@@ -60,15 +67,11 @@ body {
   padding: 0;
   width: 270px;
   margin-left: auto;
-  margin-right: 70px;
-
 
 }
 
 .logo {
   width: 138px;
-  margin-right: 28px;
-  padding-left: 70px;
 }
 
 .navigation-link {
@@ -147,11 +150,19 @@ body {
   padding: 0;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  width: 1200px;
 }
+
 
 .advantages-item {
   width: 400px;
+  height: 385px;
+}
 
+.advantages-item-wide {
+  width: 1200px;
+  display: flex;
 }
 
 .services-list {
@@ -285,9 +296,21 @@ body {
   line-height: 26px;
 }
 
+/**подвал **/
+
 .main-footer {
   color: #000000;
   background-color: #ffffff;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-container {
+  width: 1060px;
+  padding-right: 70px;
+  padding-left: 70px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .social-item a {
@@ -297,6 +320,7 @@ body {
 
 .social-list {
   list-style: none;
+  width: 142px;
 }
 
 .contacts-phone {
@@ -306,6 +330,11 @@ body {
   font-size: 40px;
   line-height: 40px;
   text-align: center;
+  width: 331px;
+}
+
+.logo {
+  width: 115px;
 }
 
 .filter-background {
