--- a/styles/styles.css
+++ b/styles/styles.css
@@ -324,6 +324,10 @@ body {
 .social-list {
   list-style: none;
   width: 142px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
 }
 
 .contacts-phone {
