--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,24 +15,24 @@
 }
 
 html {
-  height: 100%;
+  width: 100%;
 }
 
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
+
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   background: #ffffff;
   color: #333333;
+  display:flex;
+  flex-direction:column;
 }
-
 .main-container {
   flex-grow: 1;
 }
+
 
 /**Шапка **/
 
