--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,16 +19,18 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   margin: 0;
-
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
   background: #ffffff;
   color: #333333;
-  display:flex;
-  flex-direction:column;
+
 }
+
 .main-container {
   flex-grow: 1;
 }
