--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -30,19 +30,16 @@ body {
   color: #333333;
 }
 
+.container-site {
+  width: 1200px;
+  margin: 0 auto;
+}
+
 .main-container {
   flex-grow: 1;
-  width: 1200px;
-  margin: 0 auto;
 }
-
 
 /**Шапка **/
-
-.main-header {
-  width: 1200px;
-  margin: 0 auto;
-}
 
 .header-container {
   width: 1060px;
@@ -102,11 +99,6 @@ body {
 
 /**main **/
 
-.page-container {
-  width: 1200px;
-  margin: 0 auto;
-}
-
 .hero {
   color: #000000;
   background-color: #ffffff;
@@ -149,9 +141,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  width: 1200px;
 }
-
 
 .advantages-item {
   width: 400px;
@@ -217,7 +207,6 @@ body {
 
 .services-item {
   width: 400px;
-
 }
 
 .services-item h3 {
@@ -510,11 +499,6 @@ body {
   width: 684px;
   margin-left: 258px;
   margin-right: 258px;
-}
-
-.subscription-catalog-container {
-  margin: 0 auto;
-  width: 1200px;
 }
 
 .subscription-catalog h2 {
