--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,25 +14,22 @@
   font-display: swap;
 }
 
-html {
-  height: 100%;
-}
-
 body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
   margin: 0;
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
-  background: #ffffff;
+  background-color: #f2f2f2;
   color: #333333;
 }
 
 .container-site {
   width: 1200px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #ffffff;
 }
 
 .main-container {
@@ -78,7 +75,6 @@ body {
   font-size: 20px;
   line-height: 24px;
   color: #000000;
-  background-color: #ffffff;
   text-decoration: none;
   font-weight: 700;
   text-align: center;
@@ -101,7 +97,6 @@ body {
 
 .hero {
   color: #000000;
-  background-color: #ffffff;
   background-image: url("../images/index-background.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -111,10 +106,6 @@ body {
 .welcome {
   display: block;
   margin: 0 auto;
-}
-
-.hero-advantages {
-  background-color: #ffffff;
 }
 
 .hero-advantages .lead {
@@ -127,7 +118,7 @@ body {
 }
 
 .hero-advantages p {
-  background-color: #ffffff;
+  ;
   font-size: 22px;
   font-weight: 400;
   line-height: 26px;
@@ -289,7 +280,6 @@ body {
 
 .main-footer {
   color: #000000;
-  background-color: #ffffff;
   width: 1200px;
   margin: 0 auto;
 }
@@ -494,7 +484,6 @@ body {
 
 .subscription-catalog {
   color: #000000;
-  background-color: #ffffff;
   text-align: center;
   width: 684px;
   margin-left: 258px;
