--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   background-color: #ffffff;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
 }
 
 .main-container {
