--- a/styles/styles.css
+++ b/styles/styles.css
@@ -141,13 +141,13 @@ body {
 
 .advantages-item-wide {
   display: flex;
-  }
+}
 
-.advantages-item-text{
+.advantages-item-text {
   width: 400px;
 }
 
-.advantages-item-img{
+.advantages-item-img {
   width: 800px;
   height: 385px;
 }
@@ -334,7 +334,7 @@ body {
 
 .filter-background-container {
   width: 1060px;
-  padding:0 70px;
+  padding: 0 70px;
 }
 
 .catalog-filter {
@@ -376,7 +376,7 @@ body {
 .select-container {
   display: flex;
   width: 1060px;
-  margin: 0 auto;
+  padding: 0 70px;
   justify-content: space-between;
 }
 
@@ -420,8 +420,11 @@ body {
 .product-list {
   list-style: none;
   width: 1060px;
-  margin: 0 auto;
-  padding: 0;
+  padding: 0 70px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 0;
 }
 
 .product-card a {
@@ -442,7 +445,11 @@ body {
   line-height: 21px;
   border: 1px solid #e6e6e6;
   color: #333333;
+  max-width: 340px;
+  min-height: 438px;
+
 }
+
 
 .product-card .product-card-button {
   color: #ffffff;
