--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -14,25 +14,23 @@
   font-display: swap;
 }
 
-html {
-  height: 100%;
-}
-
 body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
   margin: 0;
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 21px;
-  background: #ffffff;
+  background-color: #f2f2f2;
   color: #333333;
 }
 
 .container-site {
   width: 1200px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #ffffff;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
 }
 
 .main-container {
@@ -78,7 +76,6 @@ body {
   font-size: 20px;
   line-height: 24px;
   color: #000000;
-  background-color: #ffffff;
   text-decoration: none;
   font-weight: 700;
   text-align: center;
@@ -101,7 +98,6 @@ body {
 
 .hero {
   color: #000000;
-  background-color: #ffffff;
   background-image: url("../images/index-background.jpg");
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -111,10 +107,6 @@ body {
 .welcome {
   display: block;
   margin: 0 auto;
-}
-
-.hero-advantages {
-  background-color: #ffffff;
 }
 
 .hero-advantages .lead {
@@ -127,7 +119,6 @@ body {
 }
 
 .hero-advantages p {
-  background-color: #ffffff;
   font-size: 22px;
   font-weight: 400;
   line-height: 26px;
@@ -140,16 +131,27 @@ body {
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .advantages-item {
   width: 400px;
+  min-height: 385px;
+  padding: 98px 85px;
+  box-sizing: border-box;
 }
 
 .advantages-item-wide {
-  width: 1200px;
   display: flex;
+}
+
+.advantages-item-text {
+  width: 230px;
+  min-height: 181px;
+}
+
+.advantages-item-img {
+  width: 800px;
+  height: 385px;
 }
 
 .advantages-list h3 {
@@ -203,10 +205,13 @@ body {
   padding: 0;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .services-item {
-  width: 400px;
+  width: 230px;
+  min-height: 160px;
+  padding: 112.5px 85px;
 }
 
 .services-item h3 {
@@ -289,12 +294,8 @@ body {
 
 .main-footer {
   color: #000000;
-  background-color: #ffffff;
   width: 1200px;
   margin: 0 auto;
-}
-
-.footer-container {
   width: 1060px;
   padding-right: 70px;
   padding-left: 70px;
@@ -335,7 +336,7 @@ body {
 
 .filter-background-container {
   width: 1060px;
-  margin: 0 auto;
+  padding: 0 70px;
 }
 
 .catalog-filter {
@@ -377,7 +378,7 @@ body {
 .select-container {
   display: flex;
   width: 1060px;
-  margin: 0 auto;
+  padding: 0 70px;
   justify-content: space-between;
 }
 
@@ -421,8 +422,11 @@ body {
 .product-list {
   list-style: none;
   width: 1060px;
-  margin: 0 auto;
-  padding: 0;
+  padding: 0 70px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 0;
 }
 
 .product-card a {
@@ -443,6 +447,10 @@ body {
   line-height: 21px;
   border: 1px solid #e6e6e6;
   color: #333333;
+  width: 340px;
+  min-height: 438px;
+  padding:20px;
+  box-sizing:border-box;
 }
 
 .product-card .product-card-button {
@@ -477,9 +485,9 @@ body {
 .pagination {
   list-style: none;
   display: flex;
-  width: 400px;
-  justify-content: space-between;
+  justify-content: start;
   padding: 0 70px;
+  gap: 8px;
 }
 
 .pagination a {
@@ -494,7 +502,6 @@ body {
 
 .subscription-catalog {
   color: #000000;
-  background-color: #ffffff;
   text-align: center;
   width: 684px;
   margin-left: 258px;
