--- a/styles/styles.css
+++ b/styles/styles.css
@@ -425,17 +425,58 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  margin: 0px;
+}
+
+.product-card-title {
   margin: 0;
+  margin-bottom: 16px;
+}
+
+.product-card p {
+  margin: 0;
+}
+
+.product-card img {
+  margin-bottom: 16px;
 }
 
 .product-card a {
   color: #000000;
   text-decoration: none;
+  display: block;
+}
+
+.card-price-container {
+  display: flex;
+  margin-bottom: 16px;
+}
+
+.product-card-price {
+  margin-left: auto;
+}
+
+.card-button-container {
+  display: flex;
+  margin-bottom: 16px;
+}
+
+.product-card-button-favorites {
+  margin-left: auto;
+}
+
+.star-rating {
+  display: flex;
+  margin-bottom: 0;
+}
+
+.rating {
+  margin-left: auto;
 }
 
 .product-card h3 {
   font-weight: 700;
-  font-size: 24px;
+  font-size: 28px;
   line-height: 28px;
   color: #000000;
 }
@@ -450,6 +491,14 @@ body {
   min-height: 438px;
   padding: 20px;
   box-sizing: border-box;
+}
+
+.card-button-container a {
+  width: 140px;
+  min-height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .product-card .product-card-button {
