--- a/styles/styles.css
+++ b/styles/styles.css
@@ -470,10 +470,6 @@ body {
   margin-bottom: 0;
 }
 
-.rating {
-  margin-left: auto;
-}
-
 .product-card h3 {
   font-weight: 700;
   font-size: 28px;
@@ -499,6 +495,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 4px;
 }
 
 .product-card .product-card-button {
@@ -528,6 +525,22 @@ body {
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
+  margin-left: auto;
+  width: 140px;
+  min-height: 37px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+}
+
+.product-card .stars{
+  width: 140px;
+  min-height: 37px;
+  display:flex;
+  align-items: center;
+  justify-content: start;
+  border-radius: 4px;
 }
 
 .pagination {
