--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,18 @@ body {
   flex-grow: 1;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+
 /**Шапка **/
 
 .header-container {
@@ -45,6 +57,7 @@ body {
   padding-right: 70px;
   display: flex;
   justify-content: space-between;
+  min-height: 64px;
 }
 
 .navigation {
@@ -57,6 +70,10 @@ body {
   padding: 0;
   width: 340px;
   margin-right: 285px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .menu {
@@ -65,11 +82,15 @@ body {
   padding: 0;
   width: 270px;
   margin-left: auto;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .logo {
   width: 140px;
+  height: 64px;
 }
 
 .navigation-link {
@@ -83,6 +104,8 @@ body {
 }
 
 .menu-button {
+  width: 160px;
+  height: 36px;
   font-size: 16px;
   line-height: 24px;
   color: #ffffff;
@@ -92,6 +115,17 @@ body {
   text-align: center;
   list-style-type: none;
   text-transform: uppercase;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.notification-badge {
+  background-color: #7DB54F;
+  border-radius: 10px;
+  min-width: 20px;
+  min-height: 20px;
 }
 
 /**main **/
@@ -529,16 +563,16 @@ body {
   margin-left: auto;
   width: 140px;
   min-height: 37px;
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 4px;
 }
 
-.product-card .stars{
+.product-card .stars {
   width: 140px;
   min-height: 37px;
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: start;
   border-radius: 4px;
