Задает высоту и отступы hero

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,6 +91,7 @@ body {
 .logo {
   width: 140px;
   height: 64px;
+  margin-right: 28px;
 }
 
 .navigation-link {
@@ -136,6 +137,11 @@ body {
   background-repeat: no-repeat;
   background-size: 100% auto;
   text-align: center;
+  min-height: 485px;
+}
+
+.hero h1{
+  margin: 0;
 }
 
 .welcome {
