--- a/styles/styles.css
+++ b/styles/styles.css
@@ -322,6 +322,7 @@ body {
   line-height: 26px;
   color: #333333;
   margin-top: 0;
+  margin-bottom: 54px;
 }
 
 .search-hotel a {
@@ -349,6 +350,10 @@ body {
   color: #ffffff;
   margin: 0;
   padding: 0;
+  min-height: 414px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .subscription h2 {
@@ -356,12 +361,18 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 .subscription p {
   font-weight: 400;
   font-size: 22px;
   line-height: 26px;
+  margin: 0;
+  margin-bottom: 20px;
+  width: 475px;
+  margin-bottom: 54px;
 }
 
 .search-hotel{
@@ -375,12 +386,14 @@ body {
 .main-footer {
   color: #000000;
   width: 1200px;
+  min-height: 120px;
   margin: 0 auto;
   width: 1060px;
   padding-right: 70px;
   padding-left: 70px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .social-item a {
