Выравнивает page-search

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,7 @@ body {
   flex-grow: 1;
 }
 
-/* .visually-hidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -46,7 +46,7 @@ body {
   border: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
-} */
+}
 
 
 /**Шапка **/
@@ -426,11 +426,13 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   color: #ffffff;
+  min-height: 412px;
 }
 
 .filter-background-container {
   width: 1060px;
-  padding: 0 70px;
+  padding: 70px 70px;
+  padding-top: 35px;
 }
 
 .catalog-filter {
@@ -443,13 +445,17 @@ body {
   font-weight: 700;
   font-size: 60px;
   line-height: 78px;
+  margin: 0;
+  margin-bottom:8px;
 }
 
 .breadcrumbs-list {
-  width: 114px;
+  min-width: 114px;
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   padding: 0;
+  margin: 0;
+  margin-bottom: 40px;
 }
 
 .breadcrumbs-item {
@@ -467,18 +473,29 @@ body {
 
 .catalog-filter-list {
   list-style: none;
+  padding: 0;
+}
+
+.catalog-filter-group{
+  padding:0;
 }
 
 .select-container {
   display: flex;
   width: 1060px;
-  padding: 0 70px;
+  height: 49px;
+  padding: 50px 70px;
+  padding-bottom: 40px;
   justify-content: space-between;
 }
 
 .page-search {
   margin-right: 200px;
   width: 338px;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .button-filter-container {
