--- a/styles/styles.css
+++ b/styles/styles.css
@@ -375,7 +375,7 @@ body {
   margin-bottom: 54px;
 }
 
-.search-hotel{
+.search-hotel {
   width: 592px;
   min-height: 214px;
   margin: 96px 304px;
@@ -446,7 +446,7 @@ body {
   font-size: 60px;
   line-height: 78px;
   margin: 0;
-  margin-bottom:8px;
+  margin-bottom: 8px;
 }
 
 .breadcrumbs-list {
@@ -476,8 +476,8 @@ body {
   padding: 0;
 }
 
-.catalog-filter-group{
-  padding:0;
+.catalog-filter-group {
+  padding: 0;
 }
 
 .select-container {
@@ -538,6 +538,7 @@ body {
   flex-wrap: wrap;
   gap: 20px;
   margin: 0px;
+  margin-bottom: 40px;
 }
 
 .product-card-title {
@@ -656,12 +657,22 @@ body {
   border-radius: 4px;
 }
 
+.create-line {
+  border: 1px solid #e6e6e6;
+  width: 1060px;
+  height: 0px;
+  margin: 0 70px;
+  margin-bottom: 40px;
+}
+
 .pagination {
   list-style: none;
   display: flex;
   justify-content: start;
   padding: 0 70px;
   gap: 8px;
+  margin: 0;
+  margin-bottom: 60px;
 }
 
 .pagination a {
