--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,7 @@ body {
   flex-grow: 1;
 }
 
-.visually-hidden {
+/* .visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -46,7 +46,7 @@ body {
   border: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
+} */
 
 
 /**Шапка **/
@@ -71,9 +71,9 @@ body {
   width: 340px;
   margin-right: 285px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  gap: 32px;
 }
 
 .menu {
@@ -83,7 +83,7 @@ body {
   width: 270px;
   margin-left: auto;
   display: flex;
-  justify-content: space-between;
+  gap: 24px;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -402,11 +402,18 @@ body {
   text-decoration: none;
 }
 
+.social-item{
+width: 47px;
+height: 40px;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
 .social-list {
   list-style: none;
   width: 142px;
   display: flex;
-  justify-content: space-between;
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
