--- a/6/styles/styles.css
+++ b/6/styles/styles.css
@@ -231,6 +231,10 @@ body {
   background-color: rgba(131, 179, 211, 0.2);
 }
 
+.advantages-item:nth-child(5) {
+  flex-direction: row-reverse;
+}
+
 .advantages-list .advantages-item-wide {
   background-color: #82b3d3;
   color: #ffffff;
