--- a/styles/styles.css
+++ b/styles/styles.css
@@ -375,7 +375,6 @@ body {
   font-size: 22px;
   line-height: 26px;
   margin: 0;
-  margin-bottom: 20px;
   width: 475px;
   margin-bottom: 54px;
 }
@@ -390,7 +389,6 @@ body {
 
 .main-footer {
   color: #000000;
-  width: 1200px;
   min-height: 120px;
   margin: 0 auto;
   width: 1060px;
@@ -559,7 +557,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  margin: 0px;
+  margin: 0;
   margin-bottom: 40px;
 }
 
