--- a/styles/styles.css
+++ b/styles/styles.css
@@ -692,7 +692,7 @@ width: 140px;
   margin-bottom: 60px;
 }
 
-.pagination a {
+.pagination-link {
   font-size: 20px;
   line-height: 36px;
   font-weight: 700;
@@ -705,6 +705,8 @@ width: 140px;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
+  padding: 4px;
+  box-sizing: border-box;
 }
 
 .subscription-catalog-container {
