--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,7 @@ body {
 
 .menu-button {
   width: 160px;
-  height: 36px;
+  min-height: 36px;
   font-size: 16px;
   line-height: 24px;
   color: #ffffff;
@@ -123,7 +123,7 @@ body {
 }
 
 .notification-badge {
-  background-color: #7DB54F;
+  background-color: #7db54f;
   border-radius: 10px;
   min-width: 20px;
   min-height: 20px;
