--- a/6/styles/styles.css
+++ b/6/styles/styles.css
@@ -106,7 +106,7 @@ body {
 
 .menu-button {
   width: 160px;
-  height: 36px;
+  min-height: 36px;
   font-size: 16px;
   line-height: 24px;
   color: #ffffff;
@@ -123,7 +123,7 @@ body {
 }
 
 .notification-badge {
-  background-color: #7DB54F;
+  background-color: #7db54f;
   border-radius: 10px;
   min-width: 20px;
   min-height: 20px;
@@ -585,8 +585,14 @@ body {
   margin-bottom: 16px;
 }
 
+.card-price-container p {
+  width: 140px;
+}
+
 .product-card-price {
+  width: 140px;
   margin-left: auto;
+  text-align: end;
 }
 
 .card-button-container {
@@ -686,7 +692,7 @@ body {
   margin-bottom: 60px;
 }
 
-.pagination a {
+.pagination-link {
   font-size: 20px;
   line-height: 36px;
   font-weight: 700;
@@ -699,6 +705,8 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 4px;
+  padding: 4px;
+  box-sizing: border-box;
 }
 
 .subscription-catalog-container {
