--- a/styles/styles.css
+++ b/styles/styles.css
@@ -554,8 +554,8 @@ body {
   list-style: none;
   width: 1060px;
   padding: 0 70px;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns:repeat(3, 340px);
   gap: 20px;
   margin: 0;
   margin-bottom: 40px;
@@ -622,7 +622,6 @@ body {
   line-height: 21px;
   border: 1px solid #e6e6e6;
   color: #333333;
-  width: 340px;
   min-height: 438px;
   padding: 20px;
   box-sizing: border-box;
