--- a/styles/styles.css
+++ b/styles/styles.css
@@ -484,6 +484,9 @@ body {
 .catalog-filter-list {
   list-style: none;
   padding: 0;
+  margin: 0;
+  display: grid;
+  gap: 16px;
 }
 
 .catalog-filter-group {
@@ -555,7 +558,7 @@ body {
   width: 1060px;
   padding: 0 70px;
   display: grid;
-  grid-template-columns:repeat(3, 340px);
+  grid-template-columns: repeat(3, 340px);
   gap: 20px;
   margin: 0;
   margin-bottom: 40px;
@@ -572,6 +575,7 @@ body {
 
 .product-card img {
   margin-bottom: 16px;
+  display: block;
 }
 
 .product-card a {
@@ -623,7 +627,7 @@ body {
   border: 1px solid #e6e6e6;
   color: #333333;
   min-height: 438px;
-  padding: 20px;
+  padding: 20px 19px;
   box-sizing: border-box;
   border-radius: 4px;
 }
